--- a/Assignment/contact.html
+++ b/Assignment/contact.html
@@ -88,7 +88,7 @@
 	<img id="quest" src="Images/quest.jpg">
 	<h3>Contact Us</h3>
 	<p>If you have any questions about the cars or anything on the website please let us
-	know either below or you can contact us throught our email whippage@cars.ie. If you
+	know either below or you can contact us throught our email whippagecars@gmail.com, we'd love to hear from you. If you
 	feel like we can improve in anyway please say below. Thank you for your time.</p>
 	</div>
 	<div class="container">
