Home page Changes
Some things look better, some don't

--- a/Assignmenttemp/cars.html
+++ b/Assignmenttemp/cars.html
@@ -84,7 +84,7 @@
                 <div class="image-wrapper">
                     <img src="assets/images/hyperc1.jpg" alt="hyperc">
                     <p class="mbr-description mbr-fonts-style pt-2 align-center display-4">
-						<div class="wbtn"><span class="wnoselect">Purchase</span></div>
+						<div class="wbtn"><span class="wnoselect">Purchase</span></div></p>
                 </div>
             </div>
             <div class="col-12 col-lg">
@@ -94,10 +94,10 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                     The McLaren P1 is a limited-production mid-engine plug-in hybrid sports car produced by British automobile manufacturer McLaren Automotive.
 					</br><b>Electric Motor: </b> McLaren E-Motor.</br><b>Engine: </b> 3.8L Twin-Turbocharged M838TQ V8.</br><b> Electric Range: </b> 11km/6.8mi (combined NEDC: 31km/19mi) </br><b>Price: </b>  $1,350,000
-					</p>
+					</p> 
                 </div> 
             </div>
-        </div>
+        </div><hr></hr>
     </div>
 </section>
 </div>
@@ -123,7 +123,7 @@
 					<br><b>0-100kmh: </b> 2.9s. </br> <b>Engine: </b> V12 </br><b> Price: </b> $550,000.
 					</p></div>
             </div>
-        </div>
+        </div><hr></hr>
     </div>
 </section>
 </div>
@@ -149,7 +149,7 @@
 					</p>
                 </div>
             </div>
-        </div>
+        </div><hr></hr>
     </div>
 </section>
 </div>
@@ -174,7 +174,7 @@
                         </br><b>0-100kmh: </b> 4.4s. </br> <b>Engine: </b> Electric (324kW/440PS) </br><b>Top Speed: </b> 300km/h</br><b> Price: </b> $105,000.
 						</p></div>
             </div>
-        </div>
+        </div><hr></hr>
     </div>
 </section>
 </div>
