--- a/Assignmenttemp/faqs.html
+++ b/Assignmenttemp/faqs.html
@@ -27,9 +27,10 @@
   
 </head>
 <body>
+
   
   <section class="menu cid-s48OLK6784" once="menu" id="menu1-1e">
-    
+    <br></br><br></br><br></br><br></br>
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container" >
             <div class="navbar-brand">
@@ -220,7 +221,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27739.164807848654!2d104.07941278244726!3d52.083025755889196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5da81ba430250631%3A0xf455a9c3c342282a!2sBol&#39;shoi%20Lug!5e0!3m2!1sen!2sie!4v1605885189992!5m2!1sen!2sie" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></iframe></div>
             </div>
         </div>
     </div>
