--- a/Assignmenttemp/register.html
+++ b/Assignmenttemp/register.html
@@ -73,7 +73,10 @@
     
     <div class="container">
         <div class="mbr-section-head">
-            <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>register</strong></h3>
+            <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+			<hr><hr>
+			<strong>register</strong>
+			</h3>
             
         </div>
         <div class="row justify-content-center mt-4">
