--- a/Assignmenttemp/cars.html
+++ b/Assignmenttemp/cars.html
@@ -49,7 +49,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="homepage#sectionhometop" id="homebutton" onClick="scrollFunction()">home.<br><br></a></li>
-                    <li class="nav-item"><a class="nav-link link text-white display-4" href="cars.html">cars.</a></li><li class="nav-item">
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="cars">cars.</a></li><li class="nav-item">
 					<a class="nav-link link text-white display-4" href="homepage#sectionabout" aria-expanded="false">about.</a></li>
 							
 							<li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">information.</a><div class="dropdown-menu">
