--- a/newtry/buy.html
+++ b/newtry/buy.html
@@ -154,22 +154,22 @@
                     <strong>Whippage Cars</strong>
                 </h5>
                 <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap"><a href="cars.html"><u>cars</u></a></li>
-                    <li class="mbr-text item-wrap"><a href="about.html"><u>about</u></a></li>
+                    <li class="mbr-text item-wrap"><a href="cars"><u>cars</u></a></li>
+                    <li class="mbr-text item-wrap"><a href="homepage#sectionabout"><u>about</u></a></li>
                     <li class="mbr-text item-wrap"><a href="faqs.html"><u>infomation</u></a></li>
-                    <li class="mbr-text item-wrap"><a href="login.html"><u>log in</u></a></li>
-					<li class="mbr-text item-wrap"><a href="register.html"><u>register</u></a></li>
+                    <li class="mbr-text item-wrap"><a href="login"><u>log in</u></a></li>
+					<li class="mbr-text item-wrap"><a href="register"><u>register</u></a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>this is a project ig</strong>
+                    <strong>Looking for Change</strong>
                 </h5>
                 <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap">i have </li>
-                    <li class="mbr-text item-wrap">no idea</li>
-                    <li class="mbr-text item-wrap">what to put</li>
-                    <li class="mbr-text item-wrap">in this column</li>
+                    <li class="mbr-text item-wrap"></li>
+                    <li class="mbr-text item-wrap"><a href="https://www.change.org/p/kxngbari-the-release-of-move" style="color: lightblue"><u>Move</u></a></li>
+                    <li class="mbr-text item-wrap">We stand-by the release of move.</li>
+                    <li class="mbr-text item-wrap">We have and will support it.</li>
                 </ul>
             </div>
             
