--- a/newtry/faqs.html
+++ b/newtry/faqs.html
@@ -89,22 +89,21 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_29" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How to create more items in this list?</strong>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do I register?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
                             <div id="collapse1_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">The number of items is limited in this block. Open
-                                    the Block parameters to change the amount of items.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Select the "account." dropdown menu on the rop right of your device and enter the page. Then you will be prompted to enter your details to create your account with Whippage Cars.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_29" aria-expanded="false" aria-controls="collapse2">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?</strong>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do I purchase a vehicle?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
@@ -112,28 +111,28 @@
                             </div>
                             <div id="collapse2_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">Mobirise Kit is a service that provides the access to all current and new themes/extensions developed by Mobirise. New themes/extensions are released every month and will be available in your account during your plan period, without any additional charge.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Navigate towards the <a href="cars">cars</a> page and choose the vehicle that you want to purchase. Click the "purchase' button below the image and it will navigate you through the next steps that you would have to take to complete your purchase.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_29" aria-expanded="false" aria-controls="collapse3">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical projects?</strong>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do will I get my vehicle that I purchased?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
                             <div id="collapse3_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Your vehicle will be shipped out of our warehouse in Bol'shoi Lug, Irkutsk. It will be brought to you 2weeks* from the date of purchase.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_29" aria-expanded="false" aria-controls="collapse4">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Code Editor?</strong>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What methods of payment do I have?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
@@ -141,35 +140,36 @@
                             <div id="collapse4_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       lol</p>
+                                       We accept many forms of payments ranging from Visa Debit Cards, Paypal and cryptocurrency.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_29" aria-expanded="false" aria-controls="collapse5">
-                                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?</strong></h6>
+                                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Am I able to request a car if I don't see it in the cars page?</strong></h6>
                                         <span class="mbr-iconfont mobi-mbri-arrow-down mobi-mbri"></span>
                                 </a>
                             </div>
                             <div id="collapse5_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Mobirise Kit is a service that provides the access to all current and new themes/extensions developed by Mobirise. New themes/extensions are released every month and will be available in your account during your plan period, without any additional charge.</p>
+                                       Yes! We take car requests from our customers seriously and if we do not have the car you want in stock, we will work our magic and find the car that is perfect for you.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_29" aria-expanded="false" aria-controls="collapse6">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical projects?</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>I have a car that I would like to sell to Whippage Cars, how can I do this?<strong></h6>
                                     <span class="mbr-iconfont mobi-mbri-arrow-down mobi-mbri"></span>
                                 </a>
                             </div>
                             <div id="collapse6_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                                       
+									   The easiest way to do this is to get in contact with us! We will walk through the steps and if the car is worthy of being on Whipapge Cars, we will purchase it from you.</p>
                                 </div>
                             </div>
                         </div>
@@ -187,10 +187,10 @@
 	<br></br><br></br>
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Contacts</strong>
+                <strong>Contact Us.</strong>
             </h3>
             <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">
-                Contacts Subtitle
+                Whippage Cars
             </h4>
         </div>
         <div class="row justify-content-center mt-4">
@@ -204,7 +204,7 @@
                             <strong>Phone</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="tel:+12345678910" class="text-primary">0 (800) 123 45 67</a>
+                            <a href="tel:+858107581" class="text-primary">+353 (85) 810 7581</a>
                         </p>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                             <strong>Email</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="mailto:info@site.com" class="text-primary">info@site.com</a>
+                            <a href="mailto:info@site.com" class="text-primary">whippagecars@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -283,13 +283,13 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>this is a project ig</strong>
+                    <strong>Looking for Change</strong>
                 </h5>
                 <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap">i have </li>
-                    <li class="mbr-text item-wrap">no idea</li>
-                    <li class="mbr-text item-wrap">what to put</li>
-                    <li class="mbr-text item-wrap">in this column</li>
+                    <li class="mbr-text item-wrap"></li>
+                    <li class="mbr-text item-wrap"><a href="https://www.change.org/p/kxngbari-the-release-of-move" style="color: lightblue"><u>Move</u></a></li>
+                    <li class="mbr-text item-wrap">We stand-by the release of move.</li>
+                    <li class="mbr-text item-wrap">We have and will support it.</li>
                 </ul>
             </div>
             
