--- a/newtry/index.html
+++ b/newtry/index.html
@@ -404,7 +404,6 @@
         </div>
     </div>
 </section>
-
 <section class="footer4 cid-sgJnSQFRbe " once="footers" id="footer4-14">
 
     
@@ -413,7 +412,7 @@
         <div class="row text-gold">
             <div class="col-6 col-lg-3">
                 <div class="media-wrap col-md-8 col-12">
-                    <a href="homepage">
+                    <a href="https://mobiri.se/">
                         <img src="assets/images/wpc-121x123.png" alt="Mobirise">
                     </a>
                 </div>
@@ -452,20 +451,20 @@
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><a href="cars"><u>cars</u></a></li>
                     <li class="mbr-text item-wrap"><a href="homepage#sectionabout"><u>about</u></a></li>
-                    <li class="mbr-text item-wrap"><a href="faqs"><u>infomation</u></a></li>
+                    <li class="mbr-text item-wrap"><a href="faqs.html"><u>infomation</u></a></li>
                     <li class="mbr-text item-wrap"><a href="login"><u>log in</u></a></li>
 					<li class="mbr-text item-wrap"><a href="register"><u>register</u></a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>this is a project ig</strong>
+                    <strong>Looking for Change</strong>
                 </h5>
                 <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap">i have </li>
-                    <li class="mbr-text item-wrap">no idea</li>
-                    <li class="mbr-text item-wrap">what to put</li>
-                    <li class="mbr-text item-wrap">in this column</li>
+                    <li class="mbr-text item-wrap"></li>
+                    <li class="mbr-text item-wrap"><a href="https://www.change.org/p/kxngbari-the-release-of-move" style="color: lightblue"><u>Move</u></a></li>
+                    <li class="mbr-text item-wrap">We stand-by the release of move.</li>
+                    <li class="mbr-text item-wrap">We have and will support it.</li>
                 </ul>
             </div>
             
