--- a/newtry/layout.html
+++ b/newtry/layout.html
@@ -4,9 +4,13 @@
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %}</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-	</head>
+		
+  
+</head>
 	<body class="loggedin">
+
 		<nav class="navtop">
 			<div>
 				<h1>Website Title</h1>
@@ -20,3 +24,4 @@
 		</div>
 	</body>
 </html>
+
