--- a/newtry/profile-edit.html
+++ b/newtry/profile-edit.html
@@ -3,19 +3,23 @@
 {% block title %}Edit Profile{% endblock %}
 
 {% block content %}
-<h2>Edit Profile</h2>
 <div>
     <div>
         <form action="/edit_profile" method="post">
-            <label for="username">Username</label>
-            <input type="text" value="{{ account.username }}" name="username" id="username">
+            <label for="username" style="display: none;">Username</label>
+            <input type="text" value="{{ account.username }}" name="username" id="username" style="display: none;">
             <label for="password">Enter New Password</label>
             <input type="password" name="password" id="password">
-            <label for="email">Email</label>
-            <input type="email" value="{{ account.email }}" name="email" id="email">
+            <label for="email" style="display: none;">Email</label>
+            <input type="email" value="{{ account.email }}" name="email" id="email" style="display: none;">
             <br>
             <input type="submit" value="Save">
         </form>
+		
+		<form action="homepage">
+		<input type="submit" value="Delete">
+		</form>
+		
         <p>{{ msg }}</p>
     </div>
 </div>
