--- a/newtry/faqs.html
+++ b/newtry/faqs.html
@@ -96,7 +96,7 @@
                             </div>
                             <div id="collapse1_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">Select the "account." dropdown menu on the rop right of your device and enter the page. Then you will be prompted to enter your details to create your account with Whippage Cars.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Select the "account." dropdown menu on the top right of your device and select the "sign in/register." option. Then you will be prompted to enter your details to create your account with Whippage Cars.</p>
                                 </div>
                             </div>
                         </div>
@@ -118,14 +118,14 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_29" aria-expanded="false" aria-controls="collapse3">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do will I get my vehicle that I purchased?</strong>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How will I get the vehicle that I purchased?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
                             <div id="collapse3_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">Your vehicle will be shipped out of our warehouse in Bol'shoi Lug, Irkutsk. It will be brought to you 2weeks* from the date of purchase.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Your vehicle will be shipped out of our warehouse in Bol'shoi Lug, Irkutsk. It will be brought to you within 2 weeks* of your date of purchase.</p>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                             <div id="collapse4_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       We accept many forms of payments ranging from Visa Debit Cards, Paypal and cryptocurrency.</p>
+                                       We accept many forms of payment ranging from Visa Debit Card to Paypal and cryptocurrency.</p>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        
-									   The easiest way to do this is to get in contact with us! We will walk through the steps and if the car is worthy of being on Whipapge Cars, we will purchase it from you.</p>
+									   The easiest way to do this is to get in contact with us! We will walk you through the steps and if the car is worthy of being on Whipapge Cars, we will purchase it from you.</p>
                                 </div>
                             </div>
                         </div>
